# watchdiff

./: .gitignore  Cargo.toml  LICENSE  README.md  ROADMAP.md
examples/: advanced_usage.rs  fuzzy_search_demo.rs  horizontal_scroll_test.rs  performance_demo.rs  vim_mode_demo.rs
src/: cli.rs  config.rs  diff.rs  events.rs  filter.rs  highlight.rs  lib.rs  main.rs  tui.rs  watcher.rs
src/ai/: mod.rs  tests.rs
src/core/: events.rs  events_test.rs  filter.rs  mod.rs  summary.rs  watcher.rs
src/diff/: algorithms.rs  formatter.rs  generator.rs  mod.rs
src/export/: mod.rs
src/performance/: mod.rs
src/review/: mod.rs
src/ui/: mod.rs  tui.rs
tests/: integration_tests.rs  simple_integration_tests.rs
