[package]
name = "watchdiff-tui"
version = "0.2.0"
edition = "2021"
authors = ["xicv <xicv@users.noreply.github.com>"]
description = "A high-performance file watcher with beautiful TUI showing real-time diffs"
homepage = "https://github.com/xicv/watchdiff"
repository = "https://github.com/xicv/watchdiff"
readme = "README.md"
license = "MIT"
keywords = ["file-watcher", "tui", "diff", "monitoring", "development"]
categories = ["command-line-utilities", "development-tools", "filesystem"]
rust-version = "1.70.0"

[dependencies]
# File watching and filesystem
notify = "6.1"
ignore = "0.4"

# TUI and terminal
ratatui = "0.28"
crossterm = "0.28"

# CLI parsing
clap = { version = "4.5", features = ["derive"] }

# Diff generation
similar = "2.6"

# Syntax highlighting
syntect = "5.2"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Error handling
anyhow = "1.0"

# Serialization for configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Signal handling
ctrlc = "3.4"

# Date/time for export functionality
chrono = { version = "0.4", features = ["serde"] }

# Performance optimization
lru = "0.12"

# AI pattern detection
regex = "1.10"

[dev-dependencies]
tempfile = "3.8"
